--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorDark">#2C3E50</color>
     <color name="colorWhite">#FFF</color>
+    <color name="colorBlue">#00A8EC</color>
 </resources>
