Adicionado fragmentos e visualização diferentes para retrato e paisagem

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorDark">#2C3E50</color>
     <color name="colorWhite">#FFF</color>
     <color name="colorBlue">#00A8EC</color>
+    <color name="colorLightBlue">#9fb3f5</color>
 </resources>
