--- a/app/src/main/res/layout-land/list_item.xml
+++ b/app/src/main/res/layout-land/list_item.xml
@@ -7,6 +7,7 @@
         android:id="@+id/item_photo"
         android:layout_width="56dp"
         android:layout_height="56dp"
+        android:background="@color/colorBlue"
         android:src="@drawable/person"
         />
 
@@ -45,6 +46,8 @@
             android:textSize="14dp"
             android:paddingRight="8dp"
             android:paddingTop="8dp"
+            android:drawableStart="@drawable/house20"
+            android:drawablePadding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -53,6 +56,9 @@
             android:textSize="14dp"
             android:paddingTop="8dp"
             android:paddingRight="8dp"
+            android:paddingLeft="8dp"
+            android:drawableStart="@drawable/email20"
+            android:drawablePadding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
