Adicionado recursos de mapa (GoogleMaps) dentro da aplicação

--- a/app/src/main/res/menu/menu_lista_alunos.xml
+++ b/app/src/main/res/menu/menu_lista_alunos.xml
@@ -15,4 +15,11 @@
         android:title="@string/receive_exams"
         android:icon="@drawable/ic_receber"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_mapa"
+        android:orderInCategory="100"
+        android:title="@string/see_in_map"
+        android:icon="@drawable/ic_mapa"
+        app:showAsAction="always" />
 </menu>
